<resources>
    <string name="app_name">Meow Reminder</string>
    <string name="lorem">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="backdrop_title">Meow</string>
    <string name="backdrop_subtitle">weeeee~~</string>
    <string name="cat_details">Meow details :</string>
    <string name="catname">Meow Name :</string>
    <string name="btnSend">ADD MEOW!</string>
    <string name="titleHint">Meow Name Here</string>
    <string name="catbreed">Meow breed :</string>
    <string name="breedHint">Meow Breed</string>
    <string name="btnChoose">Choose Image</string>
    <string name="action_add_favourite">Add to favourites</string>
    <string name="action_next_meow">Next Meow</string>
</resources>
